--- a/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/Views/Home/About.cshtml
@@ -6,3 +6,5 @@
 
 <p>Use this area to provide additional information.</p>
 <p>Use this area to provide additional information.</p>
+<p>Use this area to provide additional information.</p>
+<p>Use this area to provide additional information.</p>
